--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,17 +1,17 @@
 ext {
-    compileSdkVersion = 27
-    buildToolsVersion = '28.0.2'
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
     minSdkVersion = 14
     targetSdkVersion = 27
-    sourceCompatibilityVersion = JavaVersion.VERSION_1_7
-    targetCompatibilityVersion = JavaVersion.VERSION_1_7
-    kotlin_version = '1.2.51'
+    sourceCompatibilityVersion = JavaVersion.VERSION_1_8
+    targetCompatibilityVersion = JavaVersion.VERSION_1_8
+    kotlin_version = '1.2.71'
     anko_version = '0.10.1'
     coroutines_version = '0.18'
-    supportLibrariesVersion = '27.1.0'
+    supportLibrariesVersion = '28.0.0'
 
     dep = [
-            androidPlugin               : 'com.android.tools.build:gradle:3.0.0-beta6',
+            androidPlugin               : 'com.android.tools.build:gradle:3.4.1',
             supportV4                   : "com.android.support:support-v4:$supportLibrariesVersion",
             supportAnnotations          : "com.android.support:support-annotations:$supportLibrariesVersion",
             junit                       : 'junit:junit:4.12',
@@ -21,7 +21,7 @@ ext {
             assertj                     : 'org.assertj:assertj-core:2.8.0',
             mockito                     : 'org.mockito:mockito-core:2.10.0',
 
-            kotlin                      : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+            kotlin                      : "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version",
             kotlinPlugin                : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version",
             kotlinxCoroutines           : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version",
 
@@ -47,7 +47,7 @@ ext {
             supportConstraintLayout     : "com.android.support.constraint:constraint-layout:1.0.2",
 
             // for okdownload-connection-okhttp
-            okhttp3                     : "com.squareup.okhttp3:okhttp:3.9.1",
+            okhttp3                     : "com.squareup.okhttp3:okhttp:3.14.1",
 
             findbugsAnnotations         : "com.google.code.findbugs:annotations:3.0.1",
             findbugsjsr305              : "com.google.code.findbugs:jsr305:3.0.1"
